# libPeR_base

./: CMakeLists.txt  README.md  README.txt  checkoutsTo-libPeR_base-From-devel.sh
cmake/: AddExtraCompilationFlags.cmake  OgreTools.cmake  PERConfig.cmake  PERDetectPlatform.cmake  PERExtraTargets.cmake  PERGenerateConfig.cmake  PERGenerateHeaders.cmake  PERModule.cmake  PERUse.cmake.in  PERUtils.cmake
cmake/templates/: PER-third-party.txt.in  PERConfig.cmake.in  PERConfigVersion.cmake.in  cmake_uninstall.cmake.in  per_modules.h.in  prHeader.h.in
data/subdividedIcosahedron/delaunayIcosahedronVertices/: delaunayIcosahedron3DVertices_0subdiv.xml  delaunayIcosahedron3DVertices_1subdiv.xml  delaunayIcosahedron3DVertices_2subdiv.xml  delaunayIcosahedron3DVertices_3subdiv.xml  delaunayIcosahedron3DVertices_4subdiv.xml  delaunayIcosahedron3DVertices_5subdiv.xml  delaunayIcosahedron3DVertices_6subdiv.xml
data/subdividedIcosahedron/voronoiIcosahedronVertices/: voronoiIcosahedron3DVertices_0subdiv.xml  voronoiIcosahedron3DVertices_1subdiv.xml  voronoiIcosahedron3DVertices_2subdiv.xml  voronoiIcosahedron3DVertices_3subdiv.xml  voronoiIcosahedron3DVertices_4subdiv.xml
doc/: Doxyfile  config-doxygen.in
example/: CMakeLists.txt
example/CartesianPolynomial2FisheyeOpenCV/: CMakeLists.txt  CartesianPolynomial2FisheyeOpenCV.cpp
example/FisheyeEquidistant2OmniCameraModelConversion/: CMakeLists.txt  FisheyeEquidistant2OmniCameraModelConversion.cpp
example/Omni2PolyCartCameraModelConversion/: CMakeLists.txt  Omni2PolyCartCameraModelConversion.cpp
example/RationalPolynomial2FisheyeOpenCV/: CMakeLists.txt  RationalPolynomial2FisheyeOpenCV.cpp
example/RationalPolynomial2PlumbBoCameraModelConversion/: CMakeLists.txt  RationalPolynomial2PlumbBoCameraModelConversion.cpp
example/pointPerspectiveProjection/: CMakeLists.txt  pointPerspectiveProjection.cpp
example/saveAndLoadStereocameraModelXML/: CMakeLists.txt  saveAndLoadStereocameraModelXML.cpp
modules/: CMakeLists.txt
modules/acquisition_representation/: CMakeLists.txt
modules/acquisition_representation/include/per/acquisition_representation/: prIcosahedronSamples.h  prRegularlySampledCSImage.h  prVoronoiIcosahedronImageMapping.h
modules/acquisition_representation/src/: prIcosahedronSamples.cpp
modules/core/: CMakeLists.txt  CMakeListsBak.txt
modules/core/include/per/core/: pr2DPointVec.h  pr3DPointVec.h  prAcquisitionModel.h  prCameraModel.h  prCameraModelConvert.h  prCartesian2DPointVec.h  prCartesian3DPointVec.h  prEquirectangular.h  prFeature.h  prFisheyeEquidistant.h  prFisheyeEquisolid.h  prGeometricalElement.h  prLocalizedSensor.h  prOmni.h  prOrthographic.h  prParaboloid.h  prPerspective.h  prPhysicalElement.h  prPointFeature.h  prPointVec.h  prPolyCart.h  prRegularSphereData.h  prRegularlySampledCPImage.h  prRegularlySampledCSImage.h  prSensorModel.h  prStereoModel.h  prcommon.h
modules/core/src/: pr2DPointVec.cpp  pr3DPointVec.cpp  prCameraModel.cpp  prCameraModelConvert.cpp  prCartesian2DPointVec.cpp  prCartesian3DPointVec.cpp  prEquirectangular.cpp  prFeature.cpp  prFisheyeEquidistant.cpp  prFisheyeEquisolid.cpp  prGeometricalElement.cpp  prLocalizedSensor.cpp  prOmni.cpp  prOrthographic.cpp  prParaboloid.cpp  prPerspective.cpp  prPhysicalElement.cpp  prPointFeature.cpp  prPointVec.cpp  prPolyCart.cpp  prSensorModel.cpp  prStereoModel.cpp
modules/estimation/: CMakeLists.txt
modules/estimation/include/per/estimation/: prFeaturesComparator.h  prModelsParametersEstimation.h  prSSDCmp.h
modules/estimation/src/: prFeaturesComparator.cpp  prModelsParametersEstimation.cpp  prSSDCmp.cpp
modules/features/: CMakeLists.txt
modules/features/include/per/features/: prFeaturesSet.h  prGaussianMixtureSample.h  prIntensity.h  prNeighborhood.h  prPhotometricGMS.h  prPhotometricnnGMS.h
modules/features/src/: prIntensity.cpp  prNeighborhood.cpp  prPhotometricGMS.cpp
modules/io/: CMakeLists.txt
modules/io/include/per/io/: prCameraModelXML.h  prEquirectangularXML.h  prIo.h  prOmniXML.h  prParaboloidXML.h  prPerspectiveXML.h  prPoseXML.h  prSensorModelXML.h  prStereoModelXML.h  prXML.h
modules/io/src/: prCameraModelXML.cpp  prEquirectangularXML.cpp  prIo.cpp  prOmniXML.cpp  prParaboloidXML.cpp  prPerspectiveXML.cpp  prPoseXML.cpp  prSensorModelXML.cpp  prStereoModelXML.cpp  prXML.cpp
modules/sensor_pose_estimation/: CMakeLists.txt
modules/sensor_pose_estimation/include/per/sensor_pose_estimation/: prCameraPoseEstim.h  prPoseEstim.h  prPosePerspectiveEstim.h  prPoseSphericalEstim.h
modules/sensor_pose_estimation/src/: prCameraPoseEstim.cpp  prPoseEstim.cpp  prPosePerspectiveEstim.cpp  prPoseSphericalEstim.cpp
